--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 html {
     scroll-behavior: smooth !important;
 }
 
 body {
     /* height: 100%; */
-    font-family: 'Montserrat', sans-serif !important;
+    font-family: 'Playfair Display', serif !important;
     /* overflow: hidden; */
 }
 
